--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,11 @@
             </div>
         </div>
 
+        <div class="cont">
+          {% block content2 %}
+          {% endblock %}
+        </div>
+
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">Static post</a></h2>
