--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,10 @@
         <div class="page-header">
             {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+              <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+              <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
             <h1><a href="/">Django Blog</a></h1>
         </div>
@@ -29,6 +33,5 @@
         </div>
 
 
-        <a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">Texto</a>
     </body>
 </html>
